[Client-Update] Package 202210101644
- packaging menu package classes

--- a/tannae-client/app/src/main/res/layout/activity_history.xml
+++ b/tannae-client/app/src/main/res/layout/activity_history.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.menu.HistoryActivity">
+    tools:context=".activity.menu.history.HistoryActivity">
 
     <Toolbar
         android:layout_width="match_parent"
