--- a/tannae-client/app/src/main/res/layout/activity_account.xml
+++ b/tannae-client/app/src/main/res/layout/activity_account.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.menu.AccountActivity">
+    tools:context=".activity.menu.account.AccountActivity">
 
     <Toolbar
         android:layout_width="match_parent"
