--- a/tannae-client/app/src/main/res/layout/activity_map.xml
+++ b/tannae-client/app/src/main/res/layout/activity_map.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.menu.MapActivity">
+    tools:context=".activity.menu.history.MapActivity">
 
     <Button
         android:id="@+id/button_back_map"
