--- a/tannae-client/app/src/main/res/layout/activity_receipt.xml
+++ b/tannae-client/app/src/main/res/layout/activity_receipt.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.menu.ReceiptActivity">
+    tools:context=".activity.menu.history.ReceiptActivity">
 
     <Toolbar
         android:layout_width="match_parent"
