--- a/tannae-client/app/src/main/res/layout/activity_qna.xml
+++ b/tannae-client/app/src/main/res/layout/activity_qna.xml
@@ -12,7 +12,7 @@
         android:background="@color/white">
 
         <Button
-            android:id="@+id/button_back_content"
+            android:id="@+id/button_back_qna"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:background="@drawable/back_arrow" />
@@ -26,6 +26,15 @@
             android:textSize="25dp"
             android:textStyle="bold" />
 
+        <Button
+            android:id="@+id/button_register_qna"
+            style="@style/Widget.Button.TextButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:text="등록하기"
+            android:textStyle="bold" />
+
     </Toolbar>
 
     <LinearLayout
@@ -36,8 +45,7 @@
         <ListView
             android:id="@+id/list_view_qnas_qna"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        </ListView>
+            android:layout_height="wrap_content"></ListView>
 
     </LinearLayout>
 
