--- a/tannae-client/app/src/main/res/layout/activity_qna_register.xml
+++ b/tannae-client/app/src/main/res/layout/activity_qna_register.xml
@@ -52,6 +52,7 @@
                 android:inputType="text"
                 android:maxLength="10"
                 android:padding="10dp"
+                android:textColor="@color/black"
                 android:textStyle="bold" />
 
             <EditText
@@ -67,6 +68,7 @@
                 android:inputType="textMultiLine"
                 android:maxLength="50"
                 android:padding="10dp"
+                android:textColor="@color/black"
                 android:textStyle="bold" />
 
             <Button
