--- a/tannae-client/app/src/main/res/layout/activity_qna_detail.xml
+++ b/tannae-client/app/src/main/res/layout/activity_qna_detail.xml
@@ -52,27 +52,39 @@
                 android:textSize="25sp"
                 android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/text_title_qna_detail"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="{TITLE}"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+                android:background="@drawable/rectangle"
+                android:orientation="vertical"
+                android:padding="10dp">
 
-            <TextView
-                android:id="@+id/text_date_qna_detail"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="{DATE}"
-                android:textColor="@color/black"
-                android:textSize="15sp" />
+                <TextView
+                    android:id="@+id/text_title_qna_detail"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="{TITLE}"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/text_date_qna_detail"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="{DATE}"
+                    android:textColor="@color/black"
+                    android:textSize="15sp" />
+
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/text_question_qna_detail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/rectangle"
+                android:padding="10dp"
                 android:text="{QUESTION}"
                 android:textColor="@color/black"
                 android:textSize="15sp" />
@@ -128,6 +140,8 @@
                 android:id="@+id/text_answer_qna_detail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/rectangle"
+                android:padding="10dp"
                 android:text="{ANSWER}"
                 android:textColor="@color/black"
                 android:textSize="15sp" />
