--- a/tannae-client/app/src/main/res/layout/activity_qna_detail.xml
+++ b/tannae-client/app/src/main/res/layout/activity_qna_detail.xml
@@ -102,7 +102,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="30dp"
                     android:text="수정하기"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:visibility="gone" />
 
                 <Button
                     android:id="@+id/button_delete_qna_detail"
@@ -111,7 +112,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="30dp"
                     android:text="삭제하기"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:visibility="gone" />
 
             </LinearLayout>
 
@@ -152,7 +154,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="답변하기"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:visibility="gone" />
 
         </LinearLayout>
 
