--- a/tannae-client/app/src/main/res/layout/activity_qna.xml
+++ b/tannae-client/app/src/main/res/layout/activity_qna.xml
@@ -45,7 +45,11 @@
         <ListView
             android:id="@+id/list_view_qnas_qna"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"></ListView>
+            android:layout_height="wrap_content"
+            android:divider="@null"
+            android:dividerHeight="0dp">
+
+        </ListView>
 
     </LinearLayout>
 
