--- a/tannae-client/app/src/main/res/layout/activity_qna_detail.xml
+++ b/tannae-client/app/src/main/res/layout/activity_qna_detail.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.menu.qna.QnaDetailActivity">
+    tools:context=".activity.menu.content.QnaDetailActivity">
 
     <Toolbar
         android:layout_width="match_parent"
