--- a/tannae-client/app/src/main/res/layout/activity_lost.xml
+++ b/tannae-client/app/src/main/res/layout/activity_lost.xml
@@ -26,6 +26,16 @@
             android:textSize="25dp"
             android:textStyle="bold" />
 
+        <Button
+            android:id="@+id/button_register_lost_lost"
+            style="@style/Widget.Button.TextButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_marginEnd="10dp"
+            android:text="분실물 등록"
+            android:textStyle="bold" />
+
     </Toolbar>
 
     <LinearLayout
